<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="?attr/qmui_skin_support_color_background"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phone_verify_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_verify_number_label"
                android:text=""
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#0056d3"
                app:met_primaryColor="#982360"
                app:met_errorColor="#ddaa00"
                app:met_maxCharacters="11"
                app:met_singleLineEllipsis="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phone_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_verify_code_label"
                android:text=""
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#0056d3"
                app:met_primaryColor="#982360"
                app:met_errorColor="#ddaa00"
                app:met_maxCharacters="10"
                app:met_singleLineEllipsis="true"/>
        </LinearLayout>

        <com.chanlin.ad.view.button.CircularProgressButton
            android:id="@+id/phone_verify_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:textColor="@color/cpb_white"
            android:textSize="18sp"
            app:cpb_cornerRadius="8dp"
            app:cpb_textIdle="@string/phone_verify_submit_label"
            app:cpb_textComplete="@string/phone_verify_submit_label"
            app:cpb_textError="@string/phone_verify_submit_label"/>

    </LinearLayout>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"/>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>