<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/qmui_config_color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusableInTouchMode="true" >

        <com.chanlin.ad.view.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@mipmap/bitcoin_yellow"
            app:border_width="0dp"
            app:border_color="#FF000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:focusableInTouchMode="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true" >

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/darkslategrey"
                    android:textSize="16sp" />

                <ImageView android:id="@+id/admin_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="1dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@mipmap/admin"
                    android:scaleType="centerCrop" />

                <ImageView android:id="@+id/ad_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="1dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@mipmap/ad"
                    android:scaleType="centerCrop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true" >

                <TextView
                    android:id="@+id/trade_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="@color/grey_action" />

                <TextView
                    android:id="@+id/trade_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textSize="10sp"
                    android:textColor="@color/grey_action" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/trade_details"
            android:textIsSelectable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/grey_msg"
            android:autoLink="email|phone|web"
            android:layout_marginTop="32dp" >
        </TextView>

        <ImageView android:id="@+id/trade_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop" />

        <com.chanlin.ad.view.GridViewForListView
            android:id="@+id/grid_image_two_columns"
            android:numColumns="2"
            android:gravity="center"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:scrollbars="none"
            android:horizontalSpacing="1pt"
            android:verticalSpacing="1pt"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
        </com.chanlin.ad.view.GridViewForListView>

        <com.chanlin.ad.view.GridViewForListView
            android:id="@+id/grid_image"
            android:numColumns="3"
            android:gravity="center"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:scrollbars="none"
            android:horizontalSpacing="1pt"
            android:verticalSpacing="1pt"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">
        </com.chanlin.ad.view.GridViewForListView>
    </LinearLayout>


<!--    <View-->
<!--        android:id="@+id/list_item_seperator"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginLeft="2dp"-->
<!--        android:layout_marginRight="2dp"-->
<!--        android:background="@color/light_grey" />-->

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/btn_stick"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/trade_stick"
            android:textSize="10sp"
            android:textStyle="normal"
            android:textColor="@color/grey_action"/>

        <Button
            android:id="@+id/btn_like"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/trade_like"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/app_color_blue"/>

        <Button
            android:id="@+id/btn_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/trade_next"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/app_color_blue"/>

        <Button
            android:id="@+id/btn_close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/trade_close"
            android:textSize="10sp"
            android:textStyle="normal"
            android:textColor="@color/grey_action"/>

        <Button
            android:id="@+id/btn_report"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/trade_report"
            android:textSize="10sp"
            android:textStyle="normal"
            android:textColor="@color/grey_action"/>

        <Button
            android:id="@+id/btn_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/trade_delete"
            android:textSize="10sp"
            android:textStyle="normal"
            android:textColor="@color/grey_action"/>

    </LinearLayout>

</LinearLayout>